--- a/assets/scss/base/_vars.scss
+++ b/assets/scss/base/_vars.scss
@@ -53,9 +53,11 @@ $font_pixel_base: ($DEFAULT_SIZE *($font_size / 100%));  /* font_pixel_base: 16p
     vertical-align: middle;
     white-space: nowrap;
     display: inline-block;
+    min-width: 47%;
     
     &:before {
         word-spacing: 0;
+        display: inline-block;
         color: $red;
         font-family: $body_font;
     };
